5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1577_1331.log
== TEST (2019-03-19 18:13:53) 
-- CODE:
50//3

-- OUTPUT:
*****
(* o o *)
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:13:57) 
-- CODE:
50//3

-- EXECUTION TIME:
0.230339
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:16:18) 
-- CODE:
//15
5

-- EXECUTION TIME:
0.123267
-- ERROR:
  File "/home/codebench/codes/1577/1331/main.py", line 1
    //15
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:06) 
-- CODE:
print (50//3)
print (5)
-- EXECUTION TIME:
0.118894
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:19) 
-- CODE:
print (50//3)
print (5)
-- EXECUTION TIME:
0.20452
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:12:25) 
-- CODE:
print (50//3)
print (50 % 3)
-- EXECUTION TIME:
0.163644
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
